# pico-timer

./: #auto_saved_files#  CMakeLists.txt  README.md  main.c  readme.md  rp2040_shift_register.c  timer.kicad_sch
drawings/: timer.kicad_pro  timer.kicad_sch
